# 86box-headless

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: c-cpp.yml  cmake.yml  codeql.yml
src/: CMakeLists.txt  vnc.c
src/headless/: CMakeLists.txt  flatbuffers_helper.hpp  headless.c  headless.cpp  headless_fs.cpp  headless_main.cpp  headless_mmap.cpp  headless_netsocket.cpp  headless_orig.c  headless_path.cpp  headless_timer.cpp  headless_ui.c  headless_util.cpp  mononoke_protobuf.cmake  mononoke_server.cpp  mononoke_server.hpp  mononoke_sound.cpp  mononoke_test_client.cmake  mononoke_test_client.cpp  mononoke_util.cmake  mononoke_video.cpp  mononoke_video.h  rampserver.cpp  rampserver.hpp  rampsound.cpp  rampvideo.cpp
src/headless/platform/: headless_cdrom.c  headless_dynld.cpp  headless_fs.cpp  headless_path.cpp  headless_timer.cpp  headless_ui.c
src/headless/proto/: mononoke_client.proto  mononoke_server.proto  mononoke_shared.proto  ramp.proto  ramp_all.fbs  ramp_client.fbs  ramp_server.fbs
src/headless/test_client/: mononoke_test_client.cpp  sdl_window.cpp  sdl_window.hpp
src/headless/ui/: headless_ui.c
src/headless/util/: buffer_pool.cpp  buffer_pool.hpp  highprec_timer.cpp  highprec_timer.hpp
src/headless/util/asio_util/: asio_types.hpp  async_condvar.hpp  mononoke_framed.cpp  mononoke_framed.hpp
src/headless/util/gfx/: difftile.cpp  difftile.hpp  surface.cpp  surface.hpp  types.hpp
src/sound/: CMakeLists.txt  null.cpp
